--- a/style.css
+++ b/style.css
@@ -25,9 +25,22 @@ body {
   min-height: 100%;
   background: var(--red) url("./images/bg-intro-mobile.png");
   font-family: "Poppins", sans-serif;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 56.5em) {
+  body {
+    background: var(--red) url("./images/bg-intro-desktop.png");
+    background-size: cover;
+  }
 }
 
 .form {
@@ -46,6 +59,21 @@ body {
           align-items: stretch;
 }
 
+@media screen and (min-width: 56.5em) {
+  .form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .form__text-group {
   padding: 5rem 2rem 2rem 2rem;
   display: -webkit-box;
@@ -57,13 +85,45 @@ body {
           flex-direction: column;
   text-align: center;
   color: white;
-  max-width: 45rem;
+  max-width: 40rem;
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__text-group {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 40%;
+            flex: 1 1 40%;
+    max-width: 50%;
+    text-align: left;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-right: 1rem;
+    padding: 0 2.5rem 0 6rem;
+  }
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__info {
+    line-height: 1.5;
+    font-size: .8rem;
+    color: rgba(255, 255, 255, 0.85);
+  }
 }
 
 .form__heading {
-  font-size: 1.6rem;
-  font-weight: 700;
+  font-size: 1.5rem;
+  font-weight: 600;
   margin-bottom: 1rem;
+  font-family: "Poppins", sans-serif;
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__heading {
+    font-size: 2.275rem;
+    line-height: 1;
+    margin-bottom: 1.5rem;
+  }
 }
 
 .form__action-group {
@@ -77,6 +137,15 @@ body {
   padding: 1.5rem;
 }
 
+@media screen and (min-width: 56.5em) {
+  .form__action-group {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 45%;
+            flex: 0 1 45%;
+    padding: 1rem 6rem 1rem 0;
+  }
+}
+
 .form__offer {
   padding: 1rem 3rem;
   color: white;
@@ -85,8 +154,14 @@ body {
   font-weight: 600;
   font-size: 1rem;
   text-align: center;
-  -webkit-box-shadow: 0 0.5rem 0rem 0rem rgba(0, 0, 0, 0.2);
-          box-shadow: 0 0.5rem 0rem 0rem rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0.325rem 0rem 0rem rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.325rem 0rem 0rem rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__offer {
+    font-size: .7rem;
+  }
 }
 
 .form__small-text {
@@ -105,34 +180,50 @@ body {
   padding: 1.5rem;
   margin-top: 2rem;
   background-color: white;
+  -webkit-box-shadow: 0 0.275rem 0rem 0rem rgba(0, 0, 0, 0.125);
+          box-shadow: 0 0.275rem 0rem 0rem rgba(0, 0, 0, 0.125);
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__input-group {
+    -webkit-box-shadow: 0 0.325rem 0rem 0rem rgba(0, 0, 0, 0.15);
+            box-shadow: 0 0.325rem 0rem 0rem rgba(0, 0, 0, 0.15);
+    margin-top: 1rem;
+  }
 }
 
 .form__input {
   padding: 1rem;
   margin-bottom: 1rem;
-  border: solid 1px var(--dark-blue);
+  border: solid 0.5px var(--gray-blue);
   border-radius: 0.25rem;
-  font-family: inherit;
+  font-family: "Poppins", sans-serif;
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__input {
+    padding: .75rem 1rem;
+  }
 }
 
 .form__input::-webkit-input-placeholder {
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .form__input:-ms-input-placeholder {
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .form__input::-ms-input-placeholder {
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .form__input::placeholder {
   font-weight: 600;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
 }
 
 .form__cta {
@@ -149,6 +240,17 @@ body {
           box-shadow: 0 0.25rem 0rem 0rem #10a263;
 }
 
+@media screen and (min-width: 56.5em) {
+  .form__cta {
+    font-size: 0.6rem;
+    -webkit-box-shadow: 0 0.125rem 0.00125rem 0.02rem #10a263;
+            box-shadow: 0 0.125rem 0.00125rem 0.02rem #10a263;
+    padding: 1rem 2rem;
+    font-weight: 700;
+    color: rgba(255, 255, 255, 0.85);
+  }
+}
+
 .form__notice {
   margin-top: 1rem;
   font-size: 0.7rem;
@@ -157,6 +259,13 @@ body {
   text-align: center;
   width: 80%;
   margin: 1rem auto auto auto;
+}
+
+@media screen and (min-width: 56.5em) {
+  .form__notice {
+    width: 100%;
+    font-size: .55rem;
+  }
 }
 
 .form__alert-msg {
@@ -168,6 +277,7 @@ body {
   font-size: 0.85rem;
   text-align: center;
   color: white;
+  display: none;
 }
 
 .attribution a {
