--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,25 @@
   --gray-blue: hsl(246, 25%, 77%);
 }
 
+@mixin respond($breakpoint) {
+    @if $breakpoint == tab-port {         
+        @media screen and (min-width: 37.5em) {
+            @content
+        }
+    }
+    @if $breakpoint == tab-land {         
+        @media screen and (min-width: 56.5em) {
+            @content
+        }
+    }
+    @if $breakpoint == desktop {         
+        @media screen and (min-width: 75em) {
+            @content
+        }
+    }
+
+}
+
 html {
   height: 100%;
 }
@@ -24,8 +43,14 @@ body {
   min-height: 100%;
   background: var(--red) url("./images/bg-intro-mobile.png");
   font-family: "Poppins", sans-serif;
-  display: grid;
-  place-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @include respond(tab-land){
+      background: var(--red) url("./images/bg-intro-desktop.png");
+      background-size: cover;
+  }
 }
 
 .form {
@@ -34,27 +59,63 @@ body {
   justify-content: flex-start;
   align-items: stretch;
 
+  @include respond(tab-land){
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+  }
+
   &__text-group {
     padding: 5rem 2rem 2rem 2rem;
     display: flex;
     flex-direction: column;
     text-align: center;
-
+    
     color: white;
+    
+    max-width: 40rem;
+    
+    @include respond(tab-land){
+        flex: 1 1 40%;
+        max-width: 50%;
+        text-align: left;
+        justify-content: center;
+        margin-right: 1rem;
+        padding: 0 2.5rem 0 6rem;
+    }
+  }
 
-    max-width: 45rem;
+  &__info{
+      @include respond(tab-land){
+          line-height: 1.5;
+          font-size: .8rem;
+          color: rgba($color: white, $alpha: .85);
+          //   margin-top: 1rem;
+      }
   }
 
   &__heading {
-    font-size: 1.6rem;
-    font-weight: 700;
+    font-size: 1.5rem;
+    font-weight: 600;
     margin-bottom: 1rem;
+    font-family: "Poppins", sans-serif;
+    
+    @include respond(tab-land){
+        font-size: 2.275rem;
+        line-height: 1;
+        margin-bottom: 1.5rem;
+    }
   }
 
   &__action-group {
     display: flex;
     flex-direction: column;
     padding: 1.5rem;
+
+    @include respond(tab-land){
+        flex: 0 1 45%;
+        padding: 1rem 6rem 1rem 0;
+    }
   }
 
   &__offer {
@@ -66,34 +127,50 @@ body {
     font-weight: 600;
     font-size: 1rem;
     text-align: center;
+    
+    box-shadow: 0 0.325rem 0rem 0rem rgba($color: #000000, $alpha: 0.2);
+    
+    @include respond(tab-land){
+        font-size: .7rem;
 
-    box-shadow: 0 0.5rem 0rem 0rem rgba($color: #000000, $alpha: 0.2);
-  }
+    }
+}
 
-  &__small-text {
+&__small-text {
     font-weight: 200;
-  }
+}
 
-  &__input-group {
+&__input-group {
     display: flex;
     flex-direction: column;
-
+    
     border-radius: 0.5rem;
     padding: 1.5rem;
     margin-top: 2rem;
     background-color: white;
-  }
+    box-shadow: 0 0.275rem 0rem 0rem rgba($color: #000000, $alpha: 0.125);
+    
+    @include respond(tab-land){
+        box-shadow: 0 .325rem 0rem 0rem rgba($color: #000000, $alpha: 0.150);
+        margin-top: 1rem;
 
-  &__input {
+    }
+}
+
+&__input {
     padding: 1rem;
     margin-bottom: 1rem;
-    border: solid 1px var(--dark-blue);
+    border: solid .5px var(--gray-blue);
     border-radius: 0.25rem;
-    font-family: inherit;
+    font-family: "Poppins", sans-serif;
+
+    @include respond(tab-land){
+        padding: .75rem 1rem;
+    }
 
     &::placeholder {
       font-weight: 600;
-      font-size: 0.8rem;
+      font-size: 0.7rem;
     }
   }
 
@@ -108,6 +185,14 @@ body {
     font-weight: 500;
     letter-spacing: 0.1rem;
     box-shadow: 0 0.25rem 0rem 0rem hsl(154deg, 82%, 35%);
+    
+    @include respond(tab-land){
+        font-size: 0.6rem;
+        box-shadow: 0 0.125rem 0.00125rem 0.02rem hsl(154deg, 82%, 35%);
+        padding: 1rem 2rem;
+        font-weight: 700;
+        color: rgba($color: white, $alpha: .85);
+    }
   }
   &__notice {
     margin-top: 1rem;
@@ -117,6 +202,11 @@ body {
     text-align: center;
     width: 80%;
     margin: 1rem auto auto auto;
+    
+    @include respond(tab-land){
+        width: 100%;
+        font-size: .55rem;
+    }
   }
 
   &__alert-msg {
@@ -129,6 +219,7 @@ body {
   font-size: 0.85rem;
   text-align: center;
   color: white;
+  display: none;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
