--- a/style.scss
+++ b/style.scss
@@ -16,22 +16,21 @@
 }
 
 @mixin respond($breakpoint) {
-    @if $breakpoint == tab-port {         
-        @media screen and (min-width: 37.5em) {
-            @content
-        }
+  @if $breakpoint == tab-port {
+    @media screen and (min-width: 37.5em) {
+      @content;
     }
-    @if $breakpoint == tab-land {         
-        @media screen and (min-width: 56.5em) {
-            @content
-        }
+  }
+  @if $breakpoint == tab-land {
+    @media screen and (min-width: 56.5em) {
+      @content;
     }
-    @if $breakpoint == desktop {         
-        @media screen and (min-width: 75em) {
-            @content
-        }
+  }
+  @if $breakpoint == desktop {
+    @media screen and (min-width: 75em) {
+      @content;
     }
-
+  }
 }
 
 html {
@@ -47,8 +46,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-  @include respond(tab-land){
+
+  @include respond(tab-land) {
     background: var(--red) url("./images/bg-intro-desktop.png");
     background-size: cover;
     // flex-direction: row;
@@ -61,10 +60,10 @@ body {
   justify-content: flex-start;
   align-items: stretch;
 
-  @include respond(tab-land){
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
+  @include respond(tab-land) {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 
   &__text-group {
@@ -72,40 +71,40 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    
+
     color: white;
-    
+
     max-width: 40rem;
-    
-    @include respond(tab-land){
-        flex: 1 1 40%;
-        max-width: 50%;
-        text-align: left;
-        justify-content: center;
-        margin-right: 1rem;
-        padding: 0 2.5rem 0 6rem;
+
+    @include respond(tab-land) {
+      flex: 1 1 40%;
+      max-width: 50%;
+      text-align: left;
+      justify-content: center;
+      margin-right: 1rem;
+      padding: 0 2.5rem 0 6rem;
     }
   }
 
-  &__info{
-      @include respond(tab-land){
-          line-height: 1.5;
-          font-size: .8rem;
-          color: rgba($color: white, $alpha: .85);
-          //   margin-top: 1rem;
-      }
+  &__info {
+    @include respond(tab-land) {
+      line-height: 1.5;
+      font-size: 1.25rem;
+      color: rgba($color: white, $alpha: 0.85);
+      //   margin-top: 1rem;
+    }
   }
 
   &__heading {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 600;
     margin-bottom: 1rem;
     font-family: "Poppins", sans-serif;
-    
-    @include respond(tab-land){
-        font-size: 2.275rem;
-        line-height: 1;
-        margin-bottom: 1.5rem;
+
+    @include respond(tab-land) {
+      font-size: 3rem;
+      line-height: 1;
+      margin-bottom: 1.5rem;
     }
   }
 
@@ -114,9 +113,9 @@ body {
     flex-direction: column;
     padding: 1.5rem;
 
-    @include respond(tab-land){
-        flex: 0 1 45%;
-        padding: 1rem 6rem 1rem 0;
+    @include respond(tab-land) {
+      flex: 0 1 45%;
+      padding: 1rem 6rem 1rem 0;
     }
   }
 
@@ -129,51 +128,57 @@ body {
     font-weight: 600;
     font-size: 1rem;
     text-align: center;
-    
+
     box-shadow: 0 0.325rem 0rem 0rem rgba($color: #000000, $alpha: 0.2);
-    
-    @include respond(tab-land){
-        font-size: .7rem;
+  }
 
-    }
-}
-
-&__small-text {
+  &__small-text {
     font-weight: 200;
-}
+  }
 
-&__input-group {
+  &__input-group {
     display: flex;
     flex-direction: column;
-    
+
     border-radius: 0.5rem;
     padding: 1.5rem;
     margin-top: 2rem;
     background-color: white;
     box-shadow: 0 0.275rem 0rem 0rem rgba($color: #000000, $alpha: 0.125);
-    
-    @include respond(tab-land){
-        box-shadow: 0 .325rem 0rem 0rem rgba($color: #000000, $alpha: 0.150);
-        margin-top: 1rem;
 
+    @include respond(tab-land) {
+      box-shadow: 0 0.325rem 0rem 0rem rgba($color: #000000, $alpha: 0.15);
+      margin-top: 1rem;
     }
-}
+  }
 
-&__input {
+  &__input {
     padding: 1rem;
-    margin-bottom: 1rem;
-    border: solid .5px var(--gray-blue);
+    border: solid 1px var(--gray-blue);
     border-radius: 0.25rem;
     font-family: "Poppins", sans-serif;
+    position: relative;
+    width: 100%;
+    margin-bottom: 1rem;
 
-    @include respond(tab-land){
-        padding: .75rem 1rem;
+
+    @include respond(tab-land) {
+      padding: 0.75rem 1rem;
     }
 
     &::placeholder {
       font-weight: 600;
       font-size: 0.7rem;
     }
+  }
+
+  &__error{
+    text-align: right;
+    margin-bottom: .75rem;
+    font-size: 0.7rem;
+    padding: .5rem 1rem;
+    color: var(--red);
+    display: none;
   }
 
   &__cta {
@@ -187,13 +192,13 @@ body {
     font-weight: 500;
     letter-spacing: 0.1rem;
     box-shadow: 0 0.25rem 0rem 0rem hsl(154deg, 82%, 35%);
-    
-    @include respond(tab-land){
-        font-size: 0.6rem;
-        box-shadow: 0 0.125rem 0.00125rem 0.02rem hsl(154deg, 82%, 35%);
-        padding: 1rem 2rem;
-        font-weight: 700;
-        color: rgba($color: white, $alpha: .85);
+
+    @include respond(tab-land) {
+      font-size: 0.6rem;
+      box-shadow: 0 0.125rem 0.00125rem 0.02rem hsl(154deg, 82%, 35%);
+      padding: 1rem 2rem;
+      font-weight: 700;
+      color: rgba($color: white, $alpha: 0.85);
     }
   }
   &__notice {
@@ -204,10 +209,10 @@ body {
     text-align: center;
     width: 80%;
     margin: 1rem auto auto auto;
-    
-    @include respond(tab-land){
-        width: 100%;
-        font-size: .55rem;
+
+    @include respond(tab-land) {
+      width: 100%;
+      // font-size: 0.55rem;
     }
   }
 
@@ -218,10 +223,31 @@ body {
 }
 
 .attribution {
+  position: sticky;
+  bottom: 0;
   font-size: 0.85rem;
   text-align: center;
   color: white;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+fieldset{
+  display: flex;
+  flex-direction: column;
+  border: none;
+}
+
+.error{
+  background-image: url("./images/icon-error.svg");
+  background-repeat: no-repeat;
+  background-position: 95% center;
+  background-size: 5%;
+  border: solid 2px var(--red);
+  margin-bottom: 0;
+};
+
+.error + span{
+  display: unset;
 }
